# mri-swd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  atomic.h  circular_queue.h  config.h  cpu_core.cpp  cpu_core.h  debug  gdb_socket.cpp  gdb_socket.h  logging.h  lwipopts.h  main.cpp  mri_platform.cpp  mri_platform.h  pico-sdk.patch  socket_server.cpp  socket_server.h  swd.cpp  swd.h  swd.pio  uart_wifi_bridge.cpp  uart_wifi_bridge.h  ui.cpp  ui.h  update  version.h
Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h
Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  splash.h
bin2h/: common.c  common.h  main.c  try_catch.c  try_catch.h
devices/: LocalFlashing.cpp  LocalFlashing.h  README.md  devices.cpp  devices.h  nrf52.cpp  nrf52.h  rp2040-LocalFlashing.c  rp2040-LocalFlashing.ld  rp2040.cpp  rp2040.h  rp2350-LocalFlashing.c  rp2350-LocalFlashing.ld  rp2350.cpp  rp2350.h
hardware/DebugBoard/: mri-swd.kicad_pcb  mri-swd.kicad_pro  mri-swd.kicad_sch  sym-lib-table
hardware/DebugBoard/Footprints/: Adafruit-SPST-Switch-7.kicad_mod  CON10_2X5_DUK_FTSH_SAI.kicad_mod  SW_JS102011JCQN.kicad_mod
hardware/DebugBoard/Symbols/: RPi_Pico.kicad_sym
hardware/RP2040_SWD_Adapter/: RP2040_SWD_Adapter.kicad_pcb  RP2040_SWD_Adapter.kicad_pro  RP2040_SWD_Adapter.kicad_sch
hardware/RP2040_SWD_Adapter/KiCAD_footprints/: CON10_2X5_DUK_FTSH_SAI.kicad_mod
perf/perf-pc/: Makefile  main.c
perf/perf-picow/: CMakeLists.txt  debug  lwipopts.h  main.cpp
shared/: mriswd_semihost.S  mriswd_semihost.h  mriswd_semihost_c.c  newlib_retarget.c
tests/ADIdump/: CMakeLists.txt  Makefile  debug  main.cpp
tests/TestPass/: CMakeLists.txt  Makefile  README.md  debug  main.c  tests.s
tests/bridge_test/: Cargo.toml
tests/bridge_test/src/: main.rs
